[package]
name = "apheleia_narcissus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apheleia_bestiary = { version = "0.1.0", path = "../apheleia_bestiary" }
apheleia_mandrake = { path = "../apheleia_mandrake" }
apheleia_prism = { version = "0.1.0", path = "../apheleia_prism" }

[dev-dependencies]
apheleia_bookwyrm = { path = "../apheleia_bookwyrm" }
apheleia_mandrake = { path = "../apheleia_mandrake" }
