[package]
name = "apheleia_prism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apheleia_macro = { version = "0.1.0", path = "../apheleia_macro" }
bevy_ecs = { version = "0.11.2", default-features = false, features = ["multi-threaded"] }
